fix: z-index of dropdowns in controlbar

--- a/app/css/scss/organisms/_controlbars.scss
+++ b/app/css/scss/organisms/_controlbars.scss
@@ -8,7 +8,6 @@
 \*------------------------------------*/
 
 .controlbar {
-  z-index: 10;
   @extend .bg-brand;
   padding: ($all-v-padding / 2) $all-h-padding;
 
